testResults/GameCompile.log
> Task :app:compileJava
> Task :app:processResources NO-SOURCE
> Task :app:classes

> Task :app:compileTestJava FAILED
E:\Education\Linneuniversitetet\04 Kurser HT-23\1dv609 Mjukvarutestning\Assignments\a1.2\app\src\test\java\sinking_ships\controller\AppTest.java:22: error: cannot find symbol
        assertNotNull(app.createPlayer(), "should be able to create player");
                         ^
  symbol:   method createPlayer()
  location: variable app of type App
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
2 actionable tasks: 2 executed
